@@ -109,6 +109,16 @@ name|java
 operator|.
 name|net
 operator|.
+name|URLClassLoader
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
 name|UnknownHostException
 import|;
 end_import
@@ -1285,6 +1295,18 @@ operator|new
 name|HashSet
 argument_list|()
 decl_stmt|;
+specifier|private
+name|List
+name|_classpathURLs
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+specifier|private
+name|ClassLoader
+name|_classloader
+decl_stmt|;
 specifier|public
 name|Ivy
 parameter_list|()
@@ -1900,42 +1922,10 @@ operator|.
 name|next
 argument_list|()
 decl_stmt|;
-try|try
-block|{
 name|typeDef
 argument_list|(
 name|name
 argument_list|,
-name|Class
-operator|.
-name|forName
-argument_list|(
-name|p
-operator|.
-name|getProperty
-argument_list|(
-name|name
-argument_list|)
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|ClassNotFoundException
-name|e
-parameter_list|)
-block|{
-name|Message
-operator|.
-name|warn
-argument_list|(
-literal|"impossible to define resolver "
-operator|+
-name|name
-operator|+
-literal|": class not found: "
-operator|+
 name|p
 operator|.
 name|getProperty
@@ -1944,7 +1934,6 @@ name|name
 argument_list|)
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 block|}
 comment|/////////////////////////////////////////////////////////////////////////
@@ -2456,6 +2445,60 @@ name|getCacheArtifactPattern
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|_classpathURLs
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|Message
+operator|.
+name|verbose
+argument_list|(
+literal|"\t-- "
+operator|+
+name|_classpathURLs
+operator|.
+name|size
+argument_list|()
+operator|+
+literal|" custom classpath urls:"
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Iterator
+name|iter
+init|=
+name|_classpathURLs
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"\t\t"
+operator|+
+name|iter
+operator|.
+name|next
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 name|Message
 operator|.
 name|verbose
@@ -2905,16 +2948,24 @@ name|_variables
 return|;
 block|}
 specifier|public
-name|void
+name|Class
 name|typeDef
 parameter_list|(
 name|String
 name|name
 parameter_list|,
-name|Class
-name|clazz
+name|String
+name|className
 parameter_list|)
 block|{
+name|Class
+name|clazz
+init|=
+name|classForName
+argument_list|(
+name|className
+argument_list|)
+decl_stmt|;
 name|_typeDefs
 operator|.
 name|put
@@ -2923,6 +2974,141 @@ name|name
 argument_list|,
 name|clazz
 argument_list|)
+expr_stmt|;
+return|return
+name|clazz
+return|;
+block|}
+specifier|private
+name|Class
+name|classForName
+parameter_list|(
+name|String
+name|className
+parameter_list|)
+block|{
+try|try
+block|{
+return|return
+name|getClassLoader
+argument_list|()
+operator|.
+name|loadClass
+argument_list|(
+name|className
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|ClassNotFoundException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"impossible to define new type: class not found: "
+operator|+
+name|className
+operator|+
+literal|" in "
+operator|+
+name|_classpathURLs
+operator|+
+literal|" nor Ivy classloader"
+argument_list|)
+throw|;
+block|}
+block|}
+specifier|private
+name|ClassLoader
+name|getClassLoader
+parameter_list|()
+block|{
+if|if
+condition|(
+name|_classloader
+operator|==
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|_classpathURLs
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|_classloader
+operator|=
+name|Ivy
+operator|.
+name|class
+operator|.
+name|getClassLoader
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|_classloader
+operator|=
+operator|new
+name|URLClassLoader
+argument_list|(
+operator|(
+name|URL
+index|[]
+operator|)
+name|_classpathURLs
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|URL
+index|[
+name|_classpathURLs
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
+argument_list|,
+name|Ivy
+operator|.
+name|class
+operator|.
+name|getClassLoader
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|_classloader
+return|;
+block|}
+specifier|public
+name|void
+name|addClasspathURL
+parameter_list|(
+name|URL
+name|url
+parameter_list|)
+block|{
+name|_classpathURLs
+operator|.
+name|add
+argument_list|(
+name|url
+argument_list|)
+expr_stmt|;
+name|_classloader
+operator|=
+literal|null
 expr_stmt|;
 block|}
 specifier|public
