@@ -977,6 +977,46 @@ block|}
 block|}
 if|else if
 condition|(
+literal|"classpath"
+operator|.
+name|equals
+argument_list|(
+name|qName
+argument_list|)
+condition|)
+block|{
+name|String
+name|url
+init|=
+name|_ivy
+operator|.
+name|substitute
+argument_list|(
+operator|(
+name|String
+operator|)
+name|attributes
+operator|.
+name|get
+argument_list|(
+literal|"url"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|_ivy
+operator|.
+name|addClasspathURL
+argument_list|(
+operator|new
+name|URL
+argument_list|(
+name|url
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+if|else if
+condition|(
 literal|"typedef"
 operator|.
 name|equals
@@ -1024,22 +1064,15 @@ decl_stmt|;
 name|Class
 name|clazz
 init|=
-name|Class
-operator|.
-name|forName
-argument_list|(
-name|className
-argument_list|)
-decl_stmt|;
 name|_ivy
 operator|.
 name|typeDef
 argument_list|(
 name|name
 argument_list|,
-name|clazz
+name|className
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|_configurator
 operator|.
 name|typeDef
