@@ -80,6 +80,63 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+specifier|public
+name|void
+name|testTypedefWithCustomClasspath
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|ivy
+operator|.
+name|configure
+argument_list|(
+name|ConfigureTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"ivyconf-custom-typedef.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|DependencyResolver
+name|custom
+init|=
+name|ivy
+operator|.
+name|getResolver
+argument_list|(
+literal|"custom"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|custom
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"fr.jayasoft.ivy.resolver.CustomResolver"
+argument_list|,
+name|custom
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
